--- a/secao7/Rest-with-Spring-Boot-and-java/src/main/resources/application.yml
+++ b/secao7/Rest-with-Spring-Boot-and-java/src/main/resources/application.yml
@@ -12,5 +12,9 @@ spring:
      # hibernate:
       #  dialect: org.hibernate.dialect.MySQLDialect
       show-sql: false
+springdoc:
+  pathsToMatch: /pearson/**
+  swagger-ui:
+    use-root-path: true
   
       
